apps/samples/demo-nginx-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: apps
spec:
  selector:
    app: nginx-sample
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  type: ClusterIP
